# bundestag

./: .env  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  Makefile  README.ipynb  README.md  analysis-highlights.ipynb  binder.txt  bundestag.de_votes.parquet  compose.yaml  index.html  index.md  make_readme.sh  mkdocs.yml  objects.inv  postBuild  pyproject.toml  requirements.txt  set_link.sh  settings.ini  sitemap.xml  votes.parquet
.binder/: postBuild  requirements.txt
.config/: binder-requirements.txt  binder.in  core-requirements.txt  core.in  data-requirements.txt  data.in  database-requirements.txt  database.in  dev-requirements.txt  dev.in  docs-requirements.txt  docs.in  gui-requirements.txt  gui.in  ml-requirements.txt  ml.in  style-and-test-requirements.txt  style-and-test.in
.docker/: ingest_data.py  ingestion.dockerfile
.github/workflows/: ci.yml  documentation.yml  publish.yml  unittests.yml
abgeordnetenwatch_data/: df_all_votes.parquet  df_mandates.parquet  df_polls.parquet
analysis-highlights/: index.html
bundestag/: _nbdev.py  abgeordnetenwatch.py  gui.py  html_parsing.py  parsing.py  poll_clustering.py  similarity.py  test_abgeordnetenwatch.py  test_html_parsing.py  test_poll_clustering.py  test_similarity.py  test_vote_prediction.py  vote_prediction.py
bundestag.de_data/htm_files/: Deutscher Bundestag - Namenslisten der Abstimmungen (PDF und XLSX-Listen)-15.html  Deutscher Bundestag - Namenslisten der Abstimmungen (PDF und XLSX-Listen)-16.html  Deutscher Bundestag - Namenslisten der Abstimmungen (PDF und XLSX-Listen)-17.html  Deutscher Bundestag - Namenslisten der Abstimmungen (PDF und XLSX-Listen)-18.html  Deutscher Bundestag - Namenslisten der Abstimmungen (PDF und XLSX-Listen)-19.html  Deutscher Bundestag - Namenslisten der Abstimmungen (PDF und XLSX-Listen)-20.html  Deutscher Bundestag - Namenslisten der Abstimmungen (PDF und XLSX-Listen)-21.html  Deutscher Bundestag - Namenslisten der Abstimmungen (PDF und XLSX-Listen)-22.html  Deutscher Bundestag - Namenslisten der Abstimmungen (PDF und XLSX-Listen).html
bundestag/cli/__main__/: index.html
bundestag/cli/download/: index.html
bundestag/cli/transform/: index.html
bundestag/cli/utils/: index.html
bundestag/data/: index.html
bundestag/data/utils/: index.html
bundestag/fine_logging/: index.html
bundestag/gui/: index.html
bundestag/logging/: index.html
bundestag/ml/poll_clustering/: index.html
bundestag/ml/similarity/: index.html
bundestag/ml/vote_prediction/: index.html
bundestag/paths/: index.html
bundestag/poll_clustering/: index.html
bundestag/schemas/: index.html
bundestag/similarity/: index.html
bundestag/vote_prediction/: index.html
data/preprocessed/abgeordnetenwatch/: mandates_111.parquet  mandates_132.parquet  mandates_161.parquet  mandates_67.parquet  mandates_83.parquet  mandates_97.parquet  polls_111.parquet  polls_132.parquet  polls_161.parquet  polls_67.parquet  polls_83.parquet  polls_97.parquet  votes_111.parquet  votes_132.parquet  votes_161.csv  votes_161.parquet  votes_67.csv  votes_67.parquet  votes_83.csv  votes_83.parquet  votes_97.parquet
docs/: _config.yml  analysis-highlights.ipynb  analysis-highlights.md  browser_thingies.html  bundestag.md  fraktionszwang.ipynb  fraktionszwang.md  gui.html  gui_clean.html  how-to-use.md  html_parsing.html  index.html  index.md  installation.md  member_similarity.html  metabase.md  sidebar.json
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
docs/bundestag/: __main__.md  data.md  fine_logging.md  gui.md  logging.md  paths.md  poll_clustering.md  schemas.md  similarity.md  vote_prediction.md
docs/bundestag/cli/: __main__.md  download.md  transform.md  utils.md
docs/bundestag/data/: download.md  transform.md  utils.md
docs/bundestag/ml/: poll_clustering.md  similarity.md  vote_prediction.md
fraktionszwang/: index.html
how-to-use/: index.html
installation/: index.html
metabase/: index.html
nbs/: 00_browser_thingies.ipynb  00_html_parsing.ipynb  01_html_parsing.ipynb  01_similarities.ipynb  02_gui.ipynb  02_member_similarity.ipynb  03_abgeordnetenwatch_data.ipynb  03_gui.ipynb  03a_gui.ipynb  04_gui_clean.ipynb  04_poll_clustering.ipynb  05_predicting_votes.ipynb  fraktionszwang.ipynb  index.ipynb  predicting-voting-behavior.ipynb
nbs/legacy/: 05_analytics.ipynb
old/: 02_member_similarity.ipynb  04_gui_clean.ipynb  05_analytics.ipynb
requirements/: dev-requirements.txt  requirements.txt
scripts/: fix_empty_fraction.py
src/bundestag/: __main__.py  abgeordnetenwatch.py  fine_logging.py  get_xlsx_uris.py  gui.py  html_parsing.py  logging.py  modelling.py  paths.py  poll_clustering.py  schemas.py  similarity.py  test_poll_clustering.py  test_vote_prediction.py  vote_prediction.py
src/bundestag/cli/: __main__.py  download.py  transform.py  utils.py
src/bundestag/data/: __init__.py  utils.py
src/bundestag/ml/: poll_clustering.py  similarity.py  vote_prediction.py
src/legacy/: html_parsing.py  test_abgeordnetenwatch.py
src/tests/: test_abgeordnetenwatch.py  test_html_parsing.py  test_poll_clustering.py  test_similarity.py  test_vote_prediction.py
src/tests/data/: test_data.py  test_utils.py
src/tests/data_for_testing/: df_polls_111.parquet  mandates_legislature_111.json  polls_legislature_111.json
tests/: conftest.py  test_fine_logging.py  test_get_xlsx_uris.py  test_gui.py  test_logging.py  test_paths.py  test_poll_clustering.py  test_similarity.py  test_vote_prediction.py  xlsx_uris.json
tests/cli/: test_main.py
tests/data/: test_data.py  test_utils.py
tests/data/download/: test_abgeordnetenwatch.py  test_bundestag_sheets.py  test_huggingface.py
tests/data/transform/: test_abgeordnetenwatch.py  test_bundestag_sheets.py
tests/data_for_testing/: Deutscher Bundestag - Namenslisten der Abstimmungen (PDF und XLSX-Listen)-15.html  df_all_votes_111.parquet  mandates_111.parquet  test-1.html  test-2.html
tests/ml/: conftest.py  test_poll_clustering.py  test_similarity.py  test_vote_prediction.py
(+59 files in other folders)
