[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bundestag"
version = "0.0.3"
dependencies = [
    "pandas",
    "rich",
    "spacy",
    "fastai",
    "plotly",
    "scikit-learn",
    "seaborn",
    "matplotlib",
    "gensim",
    "fastcore",
    "beautifulsoup4",
    "ipywidgets",
    "xlrd",
    "openpyxl",
    "fastparquet"
]

authors = [
    {name = "eschmidt42", email="11818904+eschmidt42@users.noreply.github.com"}
]
description = "Download, parse and analyse votes in the german federal parliament, aka 'Bundestag'"

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "black",
    "isort",
    "pytest",
    "pre-commit",
    "coverage"
]

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
line_length = 79
include_trailing_comma = true
profile = "black"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["bundestag"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
markers = [
    "slow" # mark test as slow
]
